# rustminify

./: Cargo.toml
rustminify/: Cargo.toml
rustminify-cli/: Cargo.toml
rustminify/src/: lib.rs
