[package]
name = "rustminify-cli"
version.workspace = true
edition.workspace = true
description = "A tool for minifying Rust code."
repository = "https://github.com/qryxip/rustminify"
license = "MIT OR Apache-2.0"
keywords = ["minification", "minifier"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "rustminify"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rustminify = { path = "../rustminify" }
structopt = "0.3.26"
syn.workspace = true
