[package]
name = "rustminify"
version.workspace = true
edition.workspace = true
description = "Minifies Rust code."
repository = "https://github.com/madonoharu/rustminify"
license = "MIT OR Apache-2.0"
keywords = ["minification", "minifier"]
categories = ["compression"]

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn.workspace = true

[dev-dependencies]
test-case = "3"
